Added Getters and Setters to Post Order
The Post Order test will also now delete the Order to keep the DB tidy
